# Q4_2025_Accel_Shubbu03

./: README.md
week-01-tkn-ext-litesvm/escrow-litesvm/: Anchor.toml  README.md
week-01-tkn-ext-litesvm/week-1-challenge/vault/programs/vault/: Cargo.toml
week-01-tkn-ext-litesvm/week-1-challenge/vault/programs/vault/src/: error.rs  lib.rs
week-01-tkn-ext-litesvm/week-1-challenge/vault/programs/vault/src/instructions/: admin_transfer.rs  deposit.rs  emergency_transfer.rs  init_vault.rs  mint_tkn.rs  mod.rs  withdraw.rs
week-01-tkn-ext-litesvm/week-1-challenge/vault/programs/vault/src/state/: amount.rs  mod.rs  vault_config.rs
week-01-tkn-ext-litesvm/week-1-challenge/vault/programs/vault/src/tests/: mod.rs
week-01-tkn-ext-litesvm/whitelist-transfer-hook/: Anchor.toml  README.md
week-02-ers-indexing/magicblock-er/: .gitignore  Anchor.toml  README.md
week-02-ers-indexing/magicblock-er-ai-agent/: Anchor.toml  README.md
week-02-ers-indexing/magicblock-er-ai-agent/programs/magicblock-er-ai-agent/: Cargo.toml
week-02-ers-indexing/magicblock-er-ai-agent/programs/magicblock-er-ai-agent/src/: error.rs  lib.rs
week-02-ers-indexing/magicblock-er-ai-agent/programs/magicblock-er-ai-agent/src/instructions/: analyze_user.rs  callback_from_agent.rs  get_analysis.rs  initialize.rs  mod.rs
week-02-ers-indexing/magicblock-er-ai-agent/programs/magicblock-er-ai-agent/src/state/: agent.rs  analysis_result.rs  mod.rs
week-03-pinocchio/fundraiser/: Cargo.toml  README.md
week-03-pinocchio/fundraiser/src/: entrypoint.rs  errors.rs  lib.rs
week-03-pinocchio/fundraiser/src/instructions/: check_contributions.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
week-03-pinocchio/fundraiser/src/states/: contributor.rs  fundraiser.rs  mod.rs  utils.rs
week-03-pinocchio/fundraiser/src/tests/: check_contributions.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
week-03-pinocchio/pinocchio-escrow/: README.md
(+51 files in other folders)
